# lp_foundations

./: README.md  pyproject.toml
.github/workflows/: ci.yml
.github/workflows/.github/workflows/: ci.yml
assignments/: pyproject.toml
assignments/.github/workflows/: ci.yml
assignments/assignment_0/: pyproject.toml
assignments/life_expectancy/: cleaning.py
assignments/life_expectancy/tests/: conftest.py  make_fixtures.py  test_cleaning.py  test_io.py  test_pyproject.py
assignments/life_expectancy/tests/fixtures/: eu_life_expectancy_raw.tsv  pt_life_expectancy_expected.csv
